fix: sidenav overflow on mobiles

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -146,6 +146,10 @@ input[type="search"]::-webkit-search-results-decoration {
 	height: calc(100vh - var(--app-bar-h));
 }
 
+.sidenav-left.open {
+	min-width: min-content;
+}
+
 .sidenav-left {
 	position: fixed;
 	background: #718078;
